traces/bug_303.txt
examples++-mpi/hips_FreeFem.cpp:274: error: DEAD_STORE
  The value written to &id (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/hips_FreeFem.cpp:274:5: Write of unused value
272.   	  }
273.         }
274.       INTS id =-1;
           ^
275.       for(int i=0;i<MaxIds;++i)
276.         if( Ids[i] <0)  
